--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <section class="container principal">
-        <div>
-            <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-            <img src="imagens/Combo.png" alt="Combo alura plus">
+        <div class="container__caixa">
+            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <img class="container__imagem" src="imagens/Combo.png" alt="Combo alura plus">
             <a class="container__botao" href="www.alura.com.br">Assine por 12x de R$ 120,00*</a>
             <a  class="container__botao botao_secundario" href="www.alura.com.br">Assinar somente o Alura+</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
