--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
+    <section class="container secundario">
+        <img src="imagens/Plataformas.png" alt="Um monitor e um celular com o alura plus aberto">
+        <div class="container__descricao"> <!--div para reaproveitar o display grid do container-->
+            <h2 class="descricao__titulo">Assita do seu jeito</h2>
+            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
+    </section>
 </body>
 </html>
