--- a/index.html
+++ b/index.html
@@ -27,5 +27,22 @@
             <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
         </div>
     </section>
+
+    <section class="container secundario">
+        <div class="container__descricao">
+            <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+            <a class="container__botao secundario__botao" href="www.alura.com.br">Assine o Combo+</a>
+        </div>
+        <img class="secundario__imagem" src="imagens/Telas.png" alt="Telas da Alura plus e do alura lingua">
+    </section>
+
+    <section class="container secundario">
+        <img src="imagens/Notebook.png" alt="">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="decricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+
+        </div>
+    </section>
 </body>
 </html>
