--- a/index.html
+++ b/index.html
@@ -41,8 +41,24 @@
         <div class="container__descricao">
             <h2 class="descricao__titulo">Baixe seus cursos</h2>
             <p class="decricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
-
         </div>
+    </section>
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista"> <!--COLOCAR FLEX DIRECTION NA LISTA-->
+            <li>
+                <img src="imagens/tv.png" alt="ícone de TV">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="imagens/computador.png" alt="icone computador">
+                <h3 class="lista__item">Computadores</h3>
+            </li>
+            <li>
+                <img src="imagens/celular.png" alt="icone de celular">
+                <h3 class="lista__item">Celular</h3>
+            </li>
+        </ul>
     </section>
 </body>
 </html>
